<resources>
    <string name="app_name">RoadProjectMain</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_in">Войти</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="title_activity_maps_main">Map</string>
    <string name="open_map">Open Map</string>
    <string name="test">Test</string>
    <string name="title_activity_maps">Map</string>
    <string name="road_quality_checker">Road Quality Checker</string>
    <string name="send_a_complaint">Отправить жалобу</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registration">Регистрация</string>
    <string name="Enter">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="email">Почта</string>
</resources>
