<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_in_background_road_1"
    android:gravity="center_horizontal|center"
    android:orientation="vertical"
    tools:context="com.s.samsungitschool.roadprojectmain.MainActivity">

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btLoginIn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/login_in"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btSignUp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:text="@string/sign_up"
        android:textSize="17sp" />

</LinearLayout>
